tests/errors/e_redeclmeth.pyx
class C:
	def f(self):
		pass
	def f(self):
		pass
_ERRORS = u"""
4:1: 'f' already declared
"""
